# aurafloor

./: .gitignore  .npmrc  README.md  _redirects  check-env.ps1  check-user.js  check_domain_setup.sh  correct_local_domain.sh  deploy_correction.sh  deploy_fixes.sh  deployed-contracts.json  examine_files.sh  final_verification_test.sh  fix.js  fix_all_routes.sh  fix_domain_config.sh  fix_dynamic_routes.sh  middleware.ts  my_imports.txt  netlify.toml  netlify.toml.backup.1766995838  next.config.js  next.config.ts  package-lock.json  package-lock.json.backup.1766995835  package.json  package.json.backup  package.json.backup.1766995838  package.json.full  pi.d.ts  prebuild.sh  restore_deleted_files.sh  s';  setup_aura.sh  tailwind.config.ts  tsconfig.json  validation-key.txt  vercel.json  verify_correction.sh  {
app/: _not-found.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
aurafloor-contracts/aura-nft/: Cargo.toml
aurafloor-contracts/aura-nft/src/: lib.rs
components/: HorizontalCarousel.tsx  ad-banner.tsx  ad-modal.tsx  auth-dialog.tsx  auth-dialog.tsx.backup  carousel-data.ts  footer.tsx  full-player.tsx  header.tsx  inline-wallet.tsx  load-more.tsx  mini-player.tsx  mobile-nav.tsx  nft-card.tsx  notifications-panel.tsx  notifications-panel.tsx.backup  notifications-panel.tsx.backup-20260127-225919  purchase-modal.tsx  report-modal.tsx  tip-modal.tsx  ui-preference-applier.tsx  wallet-modal.tsx
hooks/: use-audio-manager.ts  use-audio-manager.ts.backup  use-audio-player.ts  use-subscription-audio.ts  useFollow.ts  useInfiniteScroll.ts  useModeration.ts  (+2 more)
(+222 files in other folders)
