[package]
name = "aura-nft"
version = "0.1.0"
description = "AuraFloor Audio NFT Contract"
authors = ["AuraFloor Team"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "23.0.1"
shared = { path = "../shared" }

[dev_dependencies]
soroban-sdk = { version = "23.0.1", features = ["testutils"] }
